--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -73,7 +73,7 @@
 .email-settings,
 .profile-settings{
   @include flex_me($just: space-between);
-  margin: 1em 0;
+  margin: .94em 0;
 }
 
 /*----------Toggle Switch/ button Styles----------*/
