--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -17,6 +17,10 @@ form{
   padding-top: 1em;
 }
 
+#userField{
+    margin-top: 0px;
+}
+
 .form-field,
 textarea{
     width: 100%;
@@ -25,7 +29,7 @@ textarea{
 }
 
 .timezone {
-    margin-top: 2.8em;
+    margin-top: 1.9em;
 }
 
 textarea{
